--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ springdoc.default-produces-media-type=application/json
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-postgresql.sql
 spring.session.timeout=3600
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
