--- a/compose.database.yaml
+++ b/compose.database.yaml
@@ -1,5 +1,6 @@
 include:
-  - compose.data.yaml
+  - ./infrastructure/compose.data.yaml
+  - ./infrastructure/compose.monitoring.yaml
 
 services:
   app:
