enable virtual threads

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-pos
 spring.session.timeout=3600
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
+spring.threads.virtual.enabled=true
