--- a/infrastructure/prometheus/prometheus.yaml
+++ b/infrastructure/prometheus/prometheus.yaml
@@ -19,3 +19,7 @@ scrape_configs:
       - targets: ['app:8080']
         labels:
           alias: 'app'
+
+  - job_name: postgres
+    static_configs:
+      - targets: ["postgres-exporter:9187"]
