--- a/infrastructure/prometheus/prometheus.yaml
+++ b/infrastructure/prometheus/prometheus.yaml
@@ -10,16 +10,22 @@ scrape_configs:
     scheme: http
     static_configs:
       - targets:
-        - localhost:9090
+          - localhost:9090
 
   - job_name: 'spring actuator'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 2s
     static_configs:
-      - targets: ['app:8080']
+      - targets: [ 'app:8080' ]
         labels:
           alias: 'app'
 
   - job_name: postgres
+    scrape_interval: 2s
     static_configs:
-      - targets: ["postgres-exporter:9187"]
+      - targets: [ "postgres-exporter:9187" ]
+
+  - job_name: redis_exporter
+    scrape_interval: 2s
+    static_configs:
+      - targets: [ 'redis-exporter:9121' ]
