--- a/infrastructure/compose.data.yaml
+++ b/infrastructure/compose.data.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:16.4'
     container_name: db
     environment:
       - 'POSTGRES_PASSWORD=user'
