--- a/compose.database.yaml
+++ b/compose.database.yaml
@@ -21,6 +21,8 @@ services:
       - '5432:5432'
     networks:
       - default-network
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
   redis:
     image: redis
