--- a/infrastructure/prometheus/prometheus.yaml
+++ b/infrastructure/prometheus/prometheus.yaml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval: 15s
-  scrape_timeout: 10s
+  scrape_interval: 2s
+  scrape_timeout: 1s
   evaluation_interval: 15s
 
 scrape_configs:
@@ -14,18 +14,21 @@ scrape_configs:
 
   - job_name: 'spring actuator'
     metrics_path: '/actuator/prometheus'
-    scrape_interval: 2s
     static_configs:
       - targets: [ 'app:8080' ]
         labels:
           alias: 'app'
 
   - job_name: postgres
-    scrape_interval: 2s
     static_configs:
       - targets: [ "postgres-exporter:9187" ]
 
   - job_name: redis_exporter
-    scrape_interval: 2s
     static_configs:
       - targets: [ 'redis-exporter:9121' ]
+
+  - job_name: dex
+    scrape_interval: 3s
+    scrape_timeout: 3s
+    static_configs:
+      - targets: [ 'dex:3456' ]
