compose: auto restart container

--- a/compose.database.yaml
+++ b/compose.database.yaml
@@ -11,3 +11,9 @@ services:
     command: --spring.profiles.active=database
     ports:
       - '8080:8080'
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 20s
