--- a/infrastructure/compose.data.yaml
+++ b/infrastructure/compose.data.yaml
@@ -8,9 +8,13 @@ services:
       - 'POSTGRES_DB=postgres'
     ports:
       - '5432:5432'
+    networks:
+      - backend
 
   redis:
     image: redis
     container_name: redis
     ports:
       - "6379:6379"
+    networks:
+      - backend
