--- a/infrastructure/nginx/nginx.conf.template
+++ b/infrastructure/nginx/nginx.conf.template
@@ -8,7 +8,7 @@ http {
         include /etc/nginx/mime.types;
 
         location / {
-            proxy_pass http://app:8083;
+            proxy_pass http://app:$SPRING_PORT;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
