feat: course registration

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,16 @@
             <artifactId>datafaker</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
