--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.session.timeout=3600
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 spring.threads.virtual.enabled=true
+logging.level.com.u012e.session_auth_db=TRACE
