--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 spring.threads.virtual.enabled=true
 logging.level.com.u012e.session_auth_db=TRACE
+spring.rabbitmq.addresses=rabbitmq:5672
