add more logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.session.timeout=3600
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 spring.threads.virtual.enabled=true
-logging.level.com.u012e.session_auth_db=INFO
+logging.level.com.u012e.session_auth_db=TRACE
 spring.rabbitmq.addresses=rabbitmq:5672
